--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
@@ -16,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "NODE_ENV=development nodemon server.js"
+    "dev": "NODE_ENV=development nodemon server.js",
+    "relay": "node relay.js"
   },
   "author": "Rob Hess <hessro@oregonstate.edu>",
   "license": "MIT",
